--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Space-invaders</title>
 </head>
 <body>
+  <style>
+    body {
+        margin: 0;
+    }
+</style>
   <canvas></canvas>
 <script src="index.js"></script>
 </body>
