criando um placar

--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Space-invaders</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Space-invaders</title>
 </head>
 <body>
   <style>
     body {
-        margin: 0;
+      margin: 0;
     }
-</style>
+  </style>
+  <p
+    style="position: fixed; z-index: 10; color: white; left: 10px; top: 10px; margin: 0; font-size: 14px; font-family: sans-serif;"
+    >
+    <span>Placar:</span> <span id="placarEl">0</span>
+  </p>
   <canvas></canvas>
-<script src="index.js"></script>
+  <script src="index.js"></script>
 </body>
+
 </html>
