criando posição fixa para o canvas

--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
   <style>
     body {
       margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding-top: 30px;
     }
   </style>
-  <p
-    style="position: fixed; z-index: 10; color: white; left: 10px; top: 10px; margin: 0; font-size: 14px; font-family: sans-serif;"
-    >
-    <span>Placar:</span> <span id="placarEl">0</span>
-  </p>
-  <canvas></canvas>
+  <div style="position: relative">
+    <p
+      style="position: absolute; z-index: 10; color: white; left: 10px; top: 10px; margin: 0; font-size: 14px; font-family: sans-serif;">
+      <span>Placar:</span> <span id="placarEl">0</span>
+    </p>
+    <canvas></canvas>
+  </div>
   <script src="index.js"></script>
 </body>
 
