--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      padding-top: 30px;
+      background-color: black;
     }
   </style>
-  <div style="position: relative">
+  <div style="position: relative; padding-top:30px ;">
     <p
-      style="position: absolute; z-index: 10; color: white; left: 10px; top: 10px; margin: 0; font-size: 14px; font-family: sans-serif;">
+      style="position: absolute; z-index: 10; color: white; left: 10px; top: 10px; margin: 0; font-size: 14px; font-family: sans-serif; ">
       <span>Placar:</span> <span id="placarEl">0</span>
     </p>
     <canvas></canvas>
